atskafka (0.6) UNRELEASED; urgency=medium

  * json: avoid 'index out of range' panic on malformed fields:
    https://phabricator.wikimedia.org/P11114
  * Add tests for atskafka.go
  * Add pprof

 -- Emanuele Rocca <ema@wikimedia.org>  Sat, 02 May 2020 12:51:05 +0200

atskafka (0.5) buster-wikimedia; urgency=medium

  * Reconnect to Unix socket in case of read errors

 -- Emanuele Rocca <ema@wikimedia.org>  Mon, 23 Mar 2020 10:01:37 +0100

atskafka (0.4) buster-wikimedia; urgency=medium

  * Add sequence number
  * Do not append to stats file

 -- Emanuele Rocca <ema@wikimedia.org>  Wed, 18 Mar 2020 16:28:43 +0100

atskafka (0.3) buster-wikimedia; urgency=medium

  * Convert float64 values to int when loading rdkafka configuration

 -- Emanuele Rocca <ema@wikimedia.org>  Tue, 17 Mar 2020 18:01:23 +0100

atskafka (0.2) buster-wikimedia; urgency=medium

  * Load rdkafka configuration from file

 -- Emanuele Rocca <ema@wikimedia.org>  Tue, 17 Mar 2020 15:38:32 +0100

atskafka (0.1) buster-wikimedia; urgency=medium

  * Initial release (T237993)

 -- Emanuele Rocca <ema@wikimedia.org>  Wed, 11 Mar 2020 17:14:18 +0100