@@ -4,6 +4,7 @@ atskafka (0.6) UNRELEASED; urgency=medium
     https://phabricator.wikimedia.org/P11114
   * Add tests for atskafka.go
   * Add pprof
+  * Filter logs by regular expression
 
  -- Emanuele Rocca <ema@wikimedia.org>  Sat, 02 May 2020 12:51:05 +0200
 
